react/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP_NAME__
  annotations:
    app.openshift.io/vcs-uri: https://github.com/intility/__REPO_NAME__
  labels:
    app.openshift.io/runtime: nginx
spec:
  replicas: 1
  # rollbacks managed by ArgoCD
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: __APP_NAME__
  template:
    metadata:
      labels:
        app: __APP_NAME__
    spec:
      containers:
        - name: __APP_NAME__
          image: ghcr.io/intility/__DOCKER_IMAGE_NAME__
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          ports:
            - containerPort: 8080
