react/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app
  annotations:
    route.openshift.io/termination: edge
  labels:
    ingress-tenant: aa
spec:
  rules:
    - host: react-app-dev.apps.int.intility.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: react-app
                port:
                  number: 8080
